Fix for Bug #20395 Cluster datanodes always assigned to nodegroup 0 during single user mode. Data node is not allowed to get added in the cluster when it is in single user mode.

ndb/include/kernel/signaldata/CmRegSignalData.hpp:
  Data node is not allowed to get added in the cluster when it is in single user mode.
ndb/include/mgmapi/ndbd_exit_codes.h:
  Data node is not allowed to get added in the cluster when it is in single user mode.
ndb/include/ndb_version.h.in:
  added version macro for version 5.0.25.
ndb/src/kernel/blocks/qmgr/QmgrMain.cpp:
  Data node is not allowed to get added in the cluster when it is in single user mode.
ndb/src/kernel/error/ndbd_exit_codes.c:
  Data node is not allowed to get added in the cluster when it is in single user mode.